Sun Jun 17 09:08:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/dblib.h src/dblib/buffering.h src/dblib/dblib.c:
	- patch #1717123 for dbsetnull implementation (removed warnings)

Sun Jun 17 08:16:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c:
	- patch #1703363 for delimiters (modified)

Wed Jun 13 09:26:00 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/fisql/fisql.c: compile even if readline is not available

Mon Jun  4 17:09:03 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am skip bsqlodb if ODBC disabled

Mon Jun 04 10:03:25 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/.cvsignore src/dblib/unittests/Makefile.am:
	* src/dblib/unittests/hang.c(added) src/tds/net.c:
	- fix problem with tds_select (detected by Perception Technologies)

Fri Jun 01 10:52:46 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: avoid overflow leading to memory errors

Thu May 31 17:02:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- fixes, partially from Brent of Perception Technologies Ltd

Thu May 31 10:54:14 EDT 2007	JK Lowden <jklowden@freetds.org>
	* TODO add recent potential bug reports

Thu May 31 14:21:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* m4/ac_nullzero.m4: fix cross compile test

Wed May 30 09:55:52 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/threadsafe.c:
	- implement gethostbyname_r with getaddrinfo (for UnixWare 7 and others)

Tue May 29 10:48:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac win32/config.h: cleanup

Fri May 25 11:07:04 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c:
	- remove a FIXME
	* src/odbc/odbc.c:
	- fix bug #1716594 ("SQLFreeStmt with SQL_CLOSE shouldn't 
	  unprepare statement")
	* src/odbc/unittests/Makefile.am src/odbc/unittests/freeclose.c(added)
	* src/odbc/unittests/.cvsignore: